--- a/views/newrecipe.handlebars
+++ b/views/newrecipe.handlebars
@@ -1,10 +1,41 @@
 <!-- sign up part -->
 <div class="signup">
-
     <div class="my-4 d-flex justify-content-sm-center justify-content-lg-start">
         <h1>Add New Recipe</h1>
     </div>
     <form>
+        <!-- filters -->
+        <div class="d-flex">
+            <div id="cuisine" class="mr-4">
+                <button type="button" class="btn btn-bright dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Cuisine
+                </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Chinese</a>
+                    <a class="dropdown-item" href="#">Hongkongnese</a>
+                    <a class="dropdown-item" href="#">Japanese</a>
+                    <a class="dropdown-item" href="#">Korean</a>
+                    <a class="dropdown-item" href="#">Thai</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Others</a>
+                </div>
+            </div>
+            <div id="foodtype" >
+                <button type="button" class="btn btn-bright dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Type
+                </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">BBQ</a>
+                    <a class="dropdown-item" href="#">Dessert</a>
+                    <a class="dropdown-item" href="#">Fried</a>
+                    <a class="dropdown-item" href="#">Steamed</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Others</a>
+                </div>
+            </div>
+        </div>
         <div class="form-group row">
             <label for="recipename" class="col-sm-2 col-form-label">Recipe Name</label>
             <div class="col-sm-12">
@@ -24,32 +55,27 @@
                     placeholder="Please describe your recipe in short">
             </div>
         </div>
-
         <fieldset class="form-group flex-wrap">
             <label for="form-check-input" class="mr-4">Difficulty</label>
             <div class="col-sm-12 ">
-            <label class="radio-inline mx-2">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="1" checked>★☆☆☆☆
-            </label>
-
-            <label class="radio-inline mx-4">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="2">★★☆☆☆
-            </label>
-
-            <label class="radio-inline mx-4">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="3">★★★☆☆
-            </label>
-
-            <label class="radio-inline mx-4">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="4">★★★★☆
-            </label>
-
-            <label class="radio-inline mx-4">
-                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="5">★★★★★
-            </label>
+                <label class="radio-inline mx-2">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="1"
+                        checked>★☆☆☆☆
+                </label>
+                <label class="radio-inline mx-4">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="2">★★☆☆☆
+                </label>
+                <label class="radio-inline mx-4">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="3">★★★☆☆
+                </label>
+                <label class="radio-inline mx-4">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="4">★★★★☆
+                </label>
+                <label class="radio-inline mx-4">
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="5">★★★★★
+                </label>
             </div>
         </fieldset>
-
         <div class="form-group mx-1">
             <label for="exampleFormControlTextarea1">HOW TO</label>
             <textarea class="form-control nullcheck" id="recipehowto" rows="10"
