--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,15 @@
+/* font */
+.font2{font-family: 'Quicksand', sans-serif;}
+.fontheavy{font-weight: bold;}
 /* colour */
-.green{background-color:rgba(0, 128, 0, 0.493);}
-.white{color: white;}
-.red{background-color:rgba(255, 0, 0, 0.445);}
-.yellow{background-color:rgb(238, 255, 0)}
-.grey{color: rgb(80, 79, 79);}
-.highlight{color: rgb(74, 105, 206);}
+.green{background-color:rgba(13, 122, 55, 0.856);}
+.redB{background-color: rgb(179, 14, 14);}
+.white{color: rgb(255, 255, 255);}
+.red{color:rgba(236, 13, 13, 0.863);}
+.yellow{color:rgb(221, 235, 23)}
+.grey{color: rgb(107, 105, 105);}
+.black{color: rgb(0, 0, 0)};
+.highlight{color: rgb(120, 45, 170)};
 .nodeco{text-decoration: none; }
 
 /* position */
@@ -22,18 +27,33 @@
     border:rgba(71, 71, 71, 0.315)solid 5px;
 }
 
-body{font-family: 'Playfair Display', serif;}
-.footer{
-font-family: Arial, Helvetica, sans-serif;
-padding: 2rem 8rem;   
+.scroll{ 
+    overflow-x: hidden; 
+    overflow-y: auto; }
+
+.top{z-index:1051 }
+
+/* Body parts */
+
+.navbar{
+    font-family: 'Playfair Display', serif;
 }
 
+body{
+    font-family: 'Playfair Display', serif;
+    font-weight: 300;
+}
+
+.footer{
+font-family: 'Quicksand', sans-serif; 
+padding: 2rem 8rem;   
+}
 
 
 /* navbar */
 #dropdown{
     
-    padding-right: 8rem;
+    padding-right: 10rem;
 }
 #dropdownmenu{
     width: 270px;
@@ -48,11 +68,11 @@ padding: 1rem;
     width: 3rem;
 }
 
-
+.lgicon:hover{ filter: opacity(0.5); cursor: pointer;}
 
 /* index page */
 .book{
-    border: solid 1px black;
+    border: solid 1px rgb(0, 0, 0);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -61,46 +81,37 @@ padding: 1rem;
 }
 
 .screen{
-    border: rgba(128, 128, 128, 0.082) solid;
-    border-radius: 5px;
-    background: rgba(128, 128, 128, 0.082);
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     max-height: 83vh;
 }
 
 #screenvideo{
     padding: 1rem 0;
-    width: 50%;
-
+    width: 1100px;
 }
 
 #foodimage{
     padding: 1rem 0;
-    width: 50%;
+    width: 1100px;
+    height: 610px;
     filter: brightness(0.9);
 }
 
+.smallpic{
+    width: 50vh;
+    height: 40vh;
+}
+
 .knob{
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(255, 255, 255, 0.596);
-  font-weight: bold;
+  width: 8rem;
+  height: 8rem;
 }
 
-.knob:hover{
-    filter: brightness(0.7)
-}
-
-#viewmore{
-text-decoration: none;
-color: rgba(0, 116, 6, 0.842);
-}
+#call-btn a{text-decoration: none;}
+#call-btn a:hover{color: white; filter: brightness(0.9);}
 
 /* search page */
 #optionbar{
@@ -126,7 +137,7 @@ color: rgba(0, 116, 6, 0.842);
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 83vh;
+    max-height: 83vh;
 }
 
 .commentbox{
@@ -141,8 +152,17 @@ color: rgba(0, 116, 6, 0.842);
 .eachrecipe{
     border: solid 0.5px rgba(128, 128, 128, 0.096);
     padding: 2rem;
-
 }
+
+#minrecipename {
+    color: rgb(0, 0, 0);
+    text-decoration:none;
+}
+
+#minrecipename:hover{
+    color:rgb(117, 117, 117) ;
+}
+
 
 .minviewimg{
     width: 80%;
@@ -170,8 +190,6 @@ color: rgba(0, 116, 6, 0.842);
     margin-top: 0.75rem;
     width: min-content;
 }
-
-
 
 /* my page */
 
@@ -225,7 +243,7 @@ color: rgba(0, 116, 6, 0.842);
     color: #ff0000;
 }
 
-/* heart rating in recipe index */
+/* rating both for hearts and stars */
 .rating {
     display: inline-block;
     unicode-bidi: bidi-override;
@@ -238,8 +256,7 @@ color: rgba(0, 116, 6, 0.842);
     padding: 0;
 }
   
-.rating-upper {
-    color: #ff0000;
+.rating-upper{
     padding: 0;
     position: absolute;
     z-index: 1;
@@ -248,7 +265,7 @@ color: rgba(0, 116, 6, 0.842);
     left: 0;
     overflow: hidden;
 }
-  
+
 .rating-lower {
     padding: 0;
     display: flex;
@@ -256,8 +273,33 @@ color: rgba(0, 116, 6, 0.842);
 }
 
 
-
-
+/* small screen */
 @media screen and (max-width: 600px) {
-#food{width:80vw; height: 40vh;}
+    .footer{display: none;}
+
+    .screen{
+       
+        width: 100vw;
+        height: max-content;}
+
+    #screenvideo{
+        width: 100%;
+        z-index: -10;
+    }  
+    
+    #foodimage{
+        width: 100%;
+        filter: brightness(0.9);
+    }
+    .knob{
+        width: 4rem;
+        height: 4rem;
+      }
+    #food{width:80vw; height: 40vh;
+    }
+    .scroll{
+    overflow-y: none;
+    overflow-x: none;
+    }
+    #recipebox{min-height: fit-content;}
 }
