--- a/views/newrecipe.handlebars
+++ b/views/newrecipe.handlebars
@@ -1,41 +1,43 @@
 <!-- sign up part -->
 <div class="signup">
-    <div class="my-4 d-flex justify-content-sm-center justify-content-lg-start">
-        <h1>Add New Recipe</h1>
+    <div class="my-4 d-flex justify-content-lg-start">
+        <h1 class="grey justify-content-sm-center">Add New Recipe</h1>
     </div>
     <form>
         <!-- filters -->
-        <div class="d-flex">
-            <div id="cuisine" class="mr-4">
-                <button type="button" class="btn btn-bright dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Cuisine
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Chinese</a>
-                    <a class="dropdown-item" href="#">Hongkongnese</a>
-                    <a class="dropdown-item" href="#">Japanese</a>
-                    <a class="dropdown-item" href="#">Korean</a>
-                    <a class="dropdown-item" href="#">Thai</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Others</a>
-                </div>
+        <div class="d-flex row">
+            <div id="cuisine" class="col-sm-12 col-lg-4">
+                <select class="form-control fontheavy highlight">
+                    <option class="dropdown-item" value="">Cuisine</option>
+                    <option class="dropdown-item" value="HongKongese">Hongkongese</option>
+                    <option class="dropdown-item" value="Japanese">Japanese</option>
+                    <option class="dropdown-item" value="Chinese">Chinese</option>
+                    <option class="dropdown-item" value="Korean">Korean</option>
+                    <option class="dropdown-item" value="Thai">Thai</option>
+                    <option class="dropdown-item" value="Others">Others</option>
+                </select>
             </div>
-            <div id="foodtype" >
-                <button type="button" class="btn btn-bright dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Type
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">BBQ</a>
-                    <a class="dropdown-item" href="#">Dessert</a>
-                    <a class="dropdown-item" href="#">Fried</a>
-                    <a class="dropdown-item" href="#">Steamed</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Others</a>
-                </div>
+
+            <div id="foodtype" class="col-sm-12 col-lg-4">
+                <select class="form-control fontheavy highlight">
+                    <option class="dropdown-item" value="">Food type</option>
+                    <option class="dropdown-item" value="BBQ">BBQ</option>
+                    <option class="dropdown-item" value="Dessert">Dessert</option>
+                    <option class="dropdown-item" value="Fried">Fried</option>
+                    <option class="dropdown-item" value="Steamed" >Steamed</option>
+                    <option class="dropdown-item" value="Others" >Others</option>
+                </select>
             </div>
-        </div>
+
+
+            <div id="foodnamesection" class="col-sm-12 col-lg-4">
+                <select class="form-control fontheavy highlight">
+                    <option class="dropdown-item" href="#">Food name</option>
+                </select>
+            </div>
+
+        </div><br>
+
         <div class="form-group row">
             <label for="recipename" class="col-sm-2 col-form-label">Recipe Name</label>
             <div class="col-sm-12">
@@ -57,7 +59,7 @@
         </div>
         <fieldset class="form-group flex-wrap">
             <label for="form-check-input" class="mr-4">Difficulty</label>
-            <div class="col-sm-12 ">
+            <div class="col-sm-12">
                 <label class="radio-inline mx-2">
                     <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="1"
                         checked>★☆☆☆☆
@@ -78,14 +80,21 @@
         </fieldset>
         <div class="form-group mx-1">
             <label for="exampleFormControlTextarea1">HOW TO</label>
-            <textarea class="form-control nullcheck" id="recipehowto" rows="10"
-                placeholder="Please describe how you made the food"></textarea>
+            <textarea class="form-control nullcheck" id="recipehowto" rows="10" placeholder="Please describe how you made the food (please press enter when each step ends)
+                
+                "></textarea>
         </div>
-        <br><br>
-        <div class="form-group row d-flex justify-content-center">
+        <br>
+        <div class="custom-file mb-3">
             <div>
-                <button id="fire" type="submit" class="btn btn-outline-dark">UPLOAD</button>
+                <label for="file">Choose 1 picture of your recipe (This picture will be added to your recipe)</label><br>
+                <input type="file" class="btn btn-outline-secondary col-12" id="file" name="file" multiple>
+            </div><br>
+
+            <div class="form-group row d-flex justify-content-center">
+                <div>
+                    <button id="fire" type="submit" class="btn btn-danger">UPLOAD</button>
+                </div>
             </div>
-        </div>
     </form>
 </div>
