--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -1,6 +1,6 @@
-<div id="recipemain" class="book cotainer-fluid row">
+<nav id="recipemain" class="book cotainer-fluid row sticky-top navbar bg-light">
     <!-- filters -->
-    <div id="filters">
+    <div id="filters" class="font2">
         <button type="button" class="btn btn-outline-dark">BBQ</button>
         <button type="button" class="btn btn-outline-dark">DESSERT</button>
         <button type="button" class="btn btn-outline-dark">FRIED</button>
@@ -16,8 +16,8 @@
 
     <div id="r_recipe">
 
-            <a href="/newrecipe" role="button" id="newrecipe" class="btn btn-danger my-2 my-sm-0">Add new recipe
-            </a><br>
+        <a href="/newrecipe" role="button" id="newrecipe" class="btn btn-danger my-2 my-sm-0">Add new recipe
+        </a><br>
 
         <!-- sort -->
         <select id="sort" class="custom-select">
@@ -32,7 +32,7 @@
 
 
     <!-- first row -->
-<!--
+    <!--
 let list1 = {
     recipe: [
     {
@@ -86,15 +86,17 @@ let list1 = {
     }]
 }
     -->
-</div>
+</nav>
 
 <div class="row center">
     {{#each recipe}}
     <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-        <h2> <a href='/recipe:{{recipe_id}}'>{{recipe_name}}</a></h2>
+        <h4>
+            <a class="font2" id="minrecipename" href='/recipe:{{recipe_id}}'>{{recipe_name}}</a>
+        </h4>
         <p>{{users_user_id}}</p>
         <div class="rating">
-            <div class="rating-upper" style="width: {{recipe_rating}}%">
+            <div class="rating-upper red" style="width: {{recipe_rating}}%">
                 <span>❤</span>
                 <span>❤</span>
                 <span>❤</span>
