--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,33 +5,33 @@
     <form>
         <div class="form-group row">
             <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input type="username" class="form-control" id="usernameInput" placeholder="Email can be max 25 characters">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input type="password" class="form-control" id="pwInput" placeholder="Password must contain more than 8 characters">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input type="password" class="form-control" id="pwConfirm" placeholder="Please confirm the password">
             </div>
         </div>
 
         <div class="form-group row">
             <label for="security" class="col-sm-2 col-form-label">Security Question</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input type="text" class="form-control" id="securityQ" placeholder="This question will be asked when you forget your password">
             </div>
         </div>
 
         <div class="form-group row">
             <label for="security" class="col-sm-2 col-form-label">Your Answer</label>
-            <div class="col-sm-10">
+            <div class="col-sm-12">
                 <input type="text" class="form-control" id="securityA">
             </div>
         </div>
@@ -39,10 +39,10 @@
 
 
         <div class="form-group row">
-            <div class="col-sm-2">Recieve email</div>
-            <div class="col-sm-10">
+            <div class="col-sm-2">Do you want to recieve our email?</div>
+            <div class="col-sm-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                    <br><input class="form-check-input" type="checkbox" id="gridCheck1">
                     <label class="form-check-label" for="gridCheck1">
                         Yes, I want to receive email
                     </label>
@@ -50,10 +50,11 @@
             </div>
         </div>
         <br><br>
-        <div class="form-group row">
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-outline-dark">Sign up</button>
+        
+           <div class="form-group row d-flex justify-content-center">
+                <div>
+                    <button id="fire" type="submit" class="btn btn-lg btn-dark">Sign up</button>
+                </div>
             </div>
-        </div>
     </form>
 </div>
