--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,8 @@
     <!-- pic screen -->
     <div class="screen col-sm-12 col-md-8 col-lg-6">
         <br>
-        <h1 id="whattoeat" class="">What to eat today?</h1>
+        <h2 id="whattoeat">What to eat today?</h2>
+        <h2 id="indexuser" class="hidden">{{users_user_id}}</h2>
         <video id="screenvideo" src="bg.mp4"></video>
 
 
