--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,8 +78,7 @@
 
                                 <div class="icons mb-lg-4">
 
-                                    <button id="forgotpw" class=" btn btn-outline-dark mt-lg-4" type="submit">Forgot
-                                        password</button>
+                                    <button id="forgotpw" class=" btn btn-outline-dark mt-lg-4" type="submit"><a href="/forgotpassword">Forgotpassword</a> </button>
                                     <button id="login" class="btn btn-outline-dark mt-lg-4 ml-lg-2"
                                         type="submit">Login</button>
 
