--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -6,7 +6,11 @@
 
     <div id="recipebox" class="col-sm-12 col-md-6 scroll">
         <br>
-        <h1 class="font2">{{name}}</h1><br>
+        <div class="d-flex justify-content-center">
+        <h1 class="font2">{{name}}</h1>
+        <img src="add2.png" class="lgicon" alt="addfavourite">
+        <br>
+        </div>
         <h3 class="font2">Difficulty: <div class="rating">
                 <div class="rating-upper yellow" style="width: {{difficulty}}%">
                     <span>★</span>
