--- a/views/forgotpassword.handlebars
+++ b/views/forgotpassword.handlebars
@@ -6,7 +6,16 @@
 
     <form>
         {{!-- the security question user input during signup will come here --}}
-        <h4>Where is your primary school at?</h4>
+
+
+        <h4>What is your username?</h4>
+        <div class="form-group row">
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="username">
+            </div>
+        </div>
+        <h4>What is the first teacher's name in your primary school?</h4>
         <div class="form-group row">
 
             <div class="col-sm-10">
@@ -16,10 +25,12 @@
 
 
         <br>
-        <div class="form-group row">
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-outline-dark">Submit</button>
+        <div class="form-group row d-flex justify-content-center">
+            <div>
+                <button type="submit" class="btn btn-lg btn-dark">Submit</button>
             </div>
         </div>
+
+
     </form>
 </div>
