--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,37 +2,37 @@
 <div class="signup">
     <br>
     <h1 class="grey">Sign up</h1><br>
-    <form>
+    <form action="/signup" method="post">
         <div class="form-group row">
-            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <label for="usernameInput" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-12">
-                <input type="username" class="form-control" id="usernameInput" placeholder="Email can be max 25 characters">
+                <input type="text" name="username" class="form-control" id="usernameInput" placeholder="Email can be max 25 characters">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <label for="pwInput" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-12">
-                <input type="password" class="form-control" id="pwInput" placeholder="Password must contain more than 8 characters">
+                <input type="password" name="password" class="form-control" id="pwInput" placeholder="Password must contain more than 8 characters">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
+            <label for="pwConfirm" class="col-sm-2 col-form-label">Confirm Password</label>
             <div class="col-sm-12">
                 <input type="password" class="form-control" id="pwConfirm" placeholder="Please confirm the password">
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="security" class="col-sm-2 col-form-label">Security Question</label>
+            <label for="securityQ" class="col-sm-2 col-form-label">Security Question</label>
             <div class="col-sm-12">
-                <input type="text" class="form-control" id="securityQ" placeholder="This question will be asked when you forget your password">
+                <input type="text" name="sq" class="form-control" id="securityQ" placeholder="This question will be asked when you forget your password">
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="security" class="col-sm-2 col-form-label">Your Answer</label>
+            <label for="securityA" class="col-sm-2 col-form-label">Your Answer</label>
             <div class="col-sm-12">
-                <input type="text" class="form-control" id="securityA">
+                <input type="text" name="sa" class="form-control" id="securityA">
             </div>
         </div>
 
@@ -53,7 +53,7 @@
         
            <div class="form-group row d-flex justify-content-center">
                 <div>
-                    <button id="fire" type="submit" class="btn btn-lg btn-dark">Sign up</button>
+                    <button id="signup_submit" type="submit" class="btn btn-lg btn-dark">Sign up</button>
                 </div>
             </div>
     </form>
