--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,15 +65,15 @@
                             <div class="dropdown-divider"></div>
                             <div class="icons justify-content-lg-center form-inline">
 
-                                <img src="t2.png" class="lgicon" alt="twitter">
-                                <img src="g2.png" class="lgicon ml-lg-2" alt="google">
+                                <a href="/auth/twitter"><img src="t2.png" class="lgicon" alt="twitter"></a>
+                                <a href="/auth/google"><img src="g2.png" class="lgicon ml-lg-2" alt="google"></a>
                             </div>
                             <div class="dropdown-divider"></div>
-                            <form class="justify-content-lg-center form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2 my-lg-2" type="search" placeholder="ID"
+                            <form action="/login" method="post" class="justify-content-lg-center form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2 my-lg-2" type="text" name="username" placeholder="ID"
                                     aria-label="ID">
 
-                                <input class="form-control mr-sm-2" type="search" placeholder="Password"
+                                <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password"
                                     aria-label="Password">
 
                                 <div class="icons mb-lg-4">
