--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,7 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="style.css">
     {{!-- animate --}}
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <!-- icon -->
     <script src="https://kit.fontawesome.com/1959ac8c31.js" crossorigin="anonymous"></script>
     {{!-- font --}}
@@ -63,25 +60,31 @@
 
 
                             <div class="dropdown-divider"></div>
-                            <div class="icons justify-content-lg-center form-inline">
+                            <div class="goneafterlogin icons justify-content-lg-center form-inline">
 
                                 <a href="/auth/twitter"><img src="t2.png" class="lgicon" alt="twitter"></a>
                                 <a href="/auth/google"><img src="g2.png" class="lgicon ml-lg-2" alt="google"></a>
                             </div>
                             <div class="dropdown-divider"></div>
-                            <form action="/login" method="post" class="justify-content-lg-center form-inline my-2 my-lg-0">
+
+                            <div class="d-flex justify-content-center">
+                                <button id="logout" class="hidden btn btn-outline-dark mt-lg-4 ml-lg-2" type="submit">Log
+                                    out</button>
+                            </div>
+
+                            <form action="/login" method="post"
+                                class="goneafterlogin justify-content-lg-center form-inline my-2 my-lg-0">
                                 <input class="form-control mr-sm-2 my-lg-2" type="text" name="username" placeholder="ID"
                                     aria-label="ID">
 
-                                <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password"
-                                    aria-label="Password">
+                                <input class="form-control mr-sm-2" type="password" name="password"
+                                    placeholder="Password" aria-label="Password">
 
                                 <div class="icons mb-lg-4">
-
-                                    <button id="forgotpw" class=" btn btn-outline-dark mt-lg-4" type="submit"><a href="/forgotpassword">Forgotpassword</a> </button>
+                                    <button id="forgotpw" class=" btn btn-outline-dark mt-lg-4" type="submit"><a
+                                            href="/forgotpassword" class="black">Forgotpassword</a> </button>
                                     <button id="login" class="btn btn-outline-dark mt-lg-4 ml-lg-2"
                                         type="submit">Login</button>
-
                                 </div>
 
                             </form>
