--- a/views/forgotpassword.handlebars
+++ b/views/forgotpassword.handlebars
@@ -7,29 +7,32 @@
     <form action="/forgotpassword" method="post">
         {{!-- the security question user input during signup will come here --}}
 
-        
-        <h4>What is your email?</h4>
-        <div class="form-group row">
-
-            <div class="col-sm-10">
-                <input type="text" name="username" class="form-control" id="username">
-            </div>
-        </div>
-        <h4>What is the first teacher's name in your primary school?</h4>
-        <div class="form-group row">
-
-            <div class="col-sm-10">
-                <input type="text" name="sa" class="form-control" id="securityA">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="pwInput" class="col-sm-2 col-form-label">New Password</label>
+ <div class="form-group row">
+            <label for="pwInput" class="col-sm-12 col-form-label">What is your email address?</label>
             <div class="col-sm-12">
-                <input type="password" name="password" class="form-control" id="pwInput" placeholder="Password must contain more than 8 characters">
+                <input type="email" name="email" class="form-control" id="pwInput"
+                    placeholder="Password must contain more than 8 characters">
             </div>
         </div>
+
+       <div class="form-group row">
+            <label for="pwInput" class="col-sm-12 col-form-label">What is the name of your first primary school teacher?</label>
+            <div class="col-sm-12">
+                <input type="text" name="securityA" class="form-control" id="pwInput"
+                    placeholder="This question will be asked if you forget your password">
+            </div>
+        </div>
+
         <div class="form-group row">
-            <label for="pwConfirm" class="col-sm-2 col-form-label">Confirm Password</label>
+            <label for="pwInput" class="col-sm-12 col-form-label">New Password</label>
+            <div class="col-sm-12">
+                <input type="password" name="password" class="form-control" id="pwInput"
+                    placeholder="Password must contain more than 8 characters">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="pwConfirm" class="col-sm-12 col-form-label">Confirm Password</label>
             <div class="col-sm-12">
                 <input type="password" class="form-control" id="pwConfirm" placeholder="Please confirm the password">
             </div>
