--- a/views/forgotpassword.handlebars
+++ b/views/forgotpassword.handlebars
@@ -11,7 +11,7 @@
             <label for="pwInput" class="col-sm-12 col-form-label">What is your email address?</label>
             <div class="col-sm-12">
                 <input type="email" name="email" class="form-control" id="pwInput"
-                    placeholder="Password must contain more than 8 characters">
+                  placeholder="Please input email address used for sign up"  >
             </div>
         </div>
 
