--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -35,7 +35,7 @@
     <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
         <div class="d-flex justify-content-center">
             <h5>
-                <a class="font2" id="minrecipename" href='/recipe:{{recipe_id}}'>{{recipe_name}}</a>
+                <a class="font2" id="minrecipename" href='/recipe/{{recipe_id}}'>{{recipe_name}}</a>
             </h5>
 
             <img class="icon2 ml-2" src="add2.png" alt="delete">
