--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,9 +1,7 @@
 <div class="book roundborder cotainer-fluid row col-sm-12">
-
     <div class="col-sm-12 col-md-6 d-flex justify-content-center">
         <img id="food" class="roundborder" src="{{imgae_url}}" alt="food">
     </div>
-
     <div id="recipebox" class="col-sm-12 col-md-6 scroll">
         <br>
         <div class="d-flex justify-content-center">
@@ -44,24 +42,13 @@
             </a>
         </div>
     </div>
-
-</div>
-
-
 </div>
 </div>
-
+</div>
 <!-- comment box -->
-<div class="cotainer-fluid book roundborder commentbox">
-
-    <form class="commentform" action="post">
-        <H1>Share your thoughts about the recipe!</H1><br>
-
-        <div class="form-group">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-
-        <div class="rate">
+<div class="cotainer-fluid roundborder commentbox">
+    <form class="commentform font2" action="post">
+        <h2>Share your thoughts about the recipe!</h2><br>   <div class="rate">
             <input type="radio" id="star5" name="rate" value="5" />
             <label for="star5" title="text">5 stars</label>
             <input type="radio" id="star4" name="rate" value="4" />
@@ -73,44 +60,15 @@
             <input type="radio" id="star1" name="rate" value="1" checked />
             <label for="star1" title="text">1 star</label>
         </div>
-
-        <br>
-        <button id="ice" name="submit" type="submit" class="btn btn-dark">Submit</button>
-
-    </form>
-</div>
-
-{{!-- <div class="cotainer-fluid book roundborder commentbox">
-
-    <h3>Other Fishball recipes</h3><br>
-    {{#each recipe}}
-    <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-        <h4>
-            {{recipe_name}}
-        </h4>
-        <p>{{users_user_id}}</p>
-        <div class="rating">
-            <div class="rating-upper red" style="width: {{recipe_rating}}%">
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-            </div>
-            <div class="rating-lower">
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-                <span>❤</span>
-            </div>
+        <div class="form-group" id="commentarea">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
         </div>
-        <img class="minviewimg col-sm-10" src="{{recipe_image_url}}" alt="recipe image">
-    </div>
-    {{else}}
-    <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-        <p>Sorry, no result!</p>
-    </div>
-    {{/each}}
-</div> --}}
+        <button id="ice" name="submit" type="submit" class="cbtn btn btn-light hidden">Submit</button>
+            <button id="cancel" type="button" class="cbtn btn btn-light hidden">Cancel</button>
+    </form>
+{{#each comment}}        
+<div id="displaycomment" class="d-flex">
+    <h4 class="fontheavy">{{user_id}}</h4>
+    <h4>{{content}}</h4>
 </div>
+ {{/each}}
