--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 /* font */
 .font2{font-family: 'Quicksand', sans-serif;}
 .fontheavy{font-weight: bold;}
+.bigfont{font-size: 2rem;}
 /* colour */
 .green{background-color:rgba(13, 122, 55, 0.856);}
 .redB{background-color: rgb(179, 14, 14);}
