--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/recipe">Recipes</a>
+                        <a class="nav-link active ft-lg" href="/recipe">Recipes</a>
                     </li>
                 </ul>
 
