--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,14 +1,14 @@
 <div class="book roundborder cotainer-fluid row col-sm-12">
 
     <div class="col-sm-12 col-md-6 d-flex justify-content-center">
-        <img id="food" class="roundborder" src="{{imgae_url}}" alt="food">
+        <img id="food" class="roundborder" src="{{image_url}}" alt="food">
     </div>
 
     <div id="recipebox" class="col-sm-12 col-md-6 scroll">
         <br>
         <div class="d-flex justify-content-center">
         <h1 class="font2">{{name}}</h1>
-        <img src="add2.png" class="lgicon" alt="addfavourite">
+        <img src="add2.png" class="addfav lgicon" alt="{{recipe_id}}">
         <br>
         </div>
         <h3 class="font2">Difficulty: <div class="rating">
@@ -25,6 +25,23 @@
                     <span>★</span>
                     <span>★</span>
                     <span>★</span>
+                </div>
+            </div>
+        </h3>
+        <h3 class="font2">Average rating: <div class="rating">
+                <div class="rating-upper red" style="width: {{recipe_rating}}%">
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
+                </div>
+                <div class="rating-lower">
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
+                    <span>❤</span>
                 </div>
             </div>
         </h3>
@@ -69,8 +86,10 @@
         </div>
 
         <div class="form-group" id="commentarea">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+            <input class="form-control" id="exampleFormControlTextarea1" />
         </div>
+
+        <input class="hidden" type="radio" id="recipe_id" value="{{recipe_id}}" />
 
         <button id="ice" name="submit" type="submit" class="cbtn btn btn-light hidden">Submit</button>
             <button id="cancel" type="button" class="cbtn btn btn-light hidden">Cancel</button>
@@ -80,7 +99,7 @@
 
 {{#each comment}}        
 <div id="displaycomment" class="d-flex">
-    <h4 class="fontheavy">{{user_id}}</h4>
+    <h4 class="fontheavy">{{user_name}}:&nbsp;</h4>
     <h4>{{content}}</h4>
 </div>
  {{/each}}
