--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -4,15 +4,16 @@
         <button type="button" class="btn btn-outline-dark">BBQ</button>
         <button type="button" class="btn btn-outline-dark">DESSERT</button>
         <button type="button" class="btn btn-outline-dark">FRIED</button>
-        <button type="button" class="btn btn-outline-dark">STEAMED</button><br>
+        <button type="button" class="btn btn-outline-dark">STEAMED</button>
+        <button type="button" class="btn btn-outline-dark">All</button><br>
         <button type="button" class="btn btn-outline-dark">Cantonese</button>
         <button type="button" class="btn btn-outline-dark">Chinese</button>
         <button type="button" class="btn btn-outline-dark">Japanese</button>
         <button type="button" class="btn btn-outline-dark">Korean</button>
         <button type="button" class="btn btn-outline-dark">Thai</button>
-
+        <button type="button" class="btn btn-outline-dark">All</button>
+        <input class="hidden" type="text" id="recipe_tag" />
     </div>
-
 
     <div id="r_recipe">
 
@@ -35,10 +36,10 @@
     <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
         <div class="d-flex justify-content-center">
             <h5>
-                <a class="font2" id="minrecipename" href='/recipe/{{recipe_id}}'>{{recipe_name}}</a>
+                <a class="font2" id="minrecipename" href='/recipe:{{recipe_id}}'>{{recipe_name}}</a>
             </h5>
 
-            <img class="icon2 ml-2" src="add2.png" alt="delete">
+            <img class="addfav icon2 ml-2" src="add2.png" alt="{{recipe_id}}">
 
         </div>
 
