--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
             <div id="recipenum">
                 <h1 class="mt-lg-2 fontheavy">
                     {{name}}</h1>
-                <h3>We've got 10 recipes of {{name}}</h3>
+                <h3>We've got {{numberofrecipe}} recipes of {{name}}</h3>
 
                 <img class="smallpic pb-2"                     src="{{image_url}}"alt="food image">
                <br> <button id="call-btn" type="button" class="animate__animated animate__jello btn 
