MyPage and index amendment

--- a/views/forgotpassword.handlebars
+++ b/views/forgotpassword.handlebars
@@ -10,7 +10,7 @@
  <div class="form-group row">
             <label for="pwInput" class="col-sm-12 col-form-label">What is your email address?</label>
             <div class="col-sm-12">
-                <input type="email" name="email" class="form-control" id="pwInput"
+                <input type="email" name="username" class="form-control" id="pwInput"
                   placeholder="Please input email address used for sign up"  >
             </div>
         </div>
@@ -18,7 +18,7 @@
        <div class="form-group row">
             <label for="pwInput" class="col-sm-12 col-form-label">What is the name of your first primary school teacher?</label>
             <div class="col-sm-12">
-                <input type="text" name="securityA" class="form-control" id="pwInput"
+                <input type="text" name="sa" class="form-control" id="pwInput"
                     placeholder="This question will be asked if you forget your password">
             </div>
         </div>
