--- a/views/mypage.handlebars
+++ b/views/mypage.handlebars
@@ -1,5 +1,5 @@
 <div class="book roundborder cotainer-fluid row" id="mypagebox">
-    <h1 class="p-4 grey">Hi {{users_user_id}}!</h1>
+    <h1 class="p-4 grey">Hi {{user_name}}!</h1>
 
 
     <h3 class="pb-4 fontheavy">My recipes</h3>
@@ -18,7 +18,7 @@
         <div class="container-fluid col-sm-12 col-md-6">
 
                 <h3 class="mt-5">
-                    <a class="black nodeco" href='/recipe:{{recipie_id}}'>{{recipe_name}}
+                    <a class="black nodeco" href='/recipe:{{recipe_id}}'>{{recipe_name}}
                     </a>
                 </h3>
         
@@ -89,10 +89,10 @@
         <div class="container-fluid col-sm-12 col-md-6">
             <div class="d-flex justify-content-center mt-5">
                 <h3>
-                    <a class="black nodeco" href='/recipe:{{recipie_id}}'>{{recipe_name}}
+                    <a class="black nodeco" href='/recipe:{{recipe_id}}'>{{recipe_name}}
                     </a>
                 </h3>
-                <br><img class="icon2 ml-2" src="delete.png" alt="delete">
+                <br><img class="deletefav icon2 ml-2" src="delete.png" alt="{{recipe_id}}">
             </div>
             <h5>{{users_user_id}}</h5>
 
@@ -139,7 +139,7 @@
 
     {{else}}
     <div class="col-sm-12">
-        <p>You haven't uploaded any recipes</p>
+        <p>You haven't got any favourite recipes</p>
     </div>
     {{/each}}
 
