--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
 
                 <img class="smallpic pb-2"                     src="{{image_url}}"alt="food image">
                <br> <button id="call-btn" type="button" class="animate__animated animate__jello btn 
-                btn-danger btn-lg"><a class="white" href="/recipe:/1"> View our famous recipe</a></button>
+                btn-danger btn-lg"><a class="white" href="/recipe:{{firstrep.recipe_id}}"> View our famous recipe</a></button>
             </div>
 
         </div>
