--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,9 @@
 
 .top{z-index:1051 }
 
+#Homebtn{width: fit-content; border-radius: 10px; border: solid chocolate; background: rosybrown; }
+#Homebtn a{color: white;text-decoration: none; font-size: 4rem;}
+
 /* Body parts */
 
 .navbar{
